<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:scaleType="fitXY"

        app:srcCompat="@drawable/background_image" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        app:srcCompat="@drawable/boy_avatar" />

    <LinearLayout
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:fontFamily="@font/abhaya_libre_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:fontFamily="@font/abhaya_libre_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workplace"
            android:textColor="@color/black"
            android:fontFamily="@font/abhaya_libre_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:fontFamily="@font/abhaya_libre_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="@color/black"
            android:fontFamily="@font/abhaya_libre_regular"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/editProfileBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="225dp"
        android:background="#0000"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/edit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProfile"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_marginTop="350dp" />
</android.widget.RelativeLayout>